--- a/SampleSequencer3-5/SampleSequencer3-5.csproj
+++ b/SampleSequencer3-5/SampleSequencer3-5.csproj
@@ -80,6 +80,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SampleControlsCollection.resx">
+      <DependentUpon>SampleControlsCollection.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
